# Project-Interstellar

./: .gitignore  README.md  et current-1
gazebo_plugin/: CMakeLists.txt  get_cubes_info.cc  world.world
gazebo_plugin/models/box1/: model.config  model.sdf
src/gazebo_plugin/: get_cubes_info.cc  package.xml  plugin_test.py  test_world.world  world.launch
src/gazebo_plugin/models/bin_model/: model.config  model.sdf
src/gazebo_plugin/models/bin_model/meshes/: bin2.dae.bak  bin3.dae  binwowall.dae
src/gazebo_plugin/models/box1/: model.config  model.sdf
src/gazebo_plugin/models/table1/: model.config  model.sdf
src/gazebo_plugin/worlds/: world.world
src/meca_500_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/meca_500_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  meca_500_r3.srdf  ompl_planning.yaml  ros_controllers.yaml
src/meca_500_moveit_config/launch/: chomp_planning_pipeline.launch.xml  controller_utils.launch  default_warehouse_db.launch  demo.launch  demo_gazebo copy.launch  demo_gazebo.launch  demo_planning_execution.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  meca_500_r3_moevit.launch  meca_500_r3_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robot.launch  robots.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  start.launch  trajectory_execution.launch.xml  warehouse.launch
src/mecademic_description/meshes/: finger.dae  hand.dae  meca_500_r3_base.dae  meca_500_r3_j1.dae  meca_500_r3_j2.dae  meca_500_r3_j3.dae  meca_500_r3_j4.dae  meca_500_r3_j5.dae  meca_500_r3_j6.dae
src/mecademic_description/urdf/: meca_500_r3.urdf.xacro
src/mecademic_viz/launch/: moveit_rviz_robot1.launch  moveit_rviz_robot2.launch
src/mecademic_viz/rviz/: robot1.rviz  robot2.rviz
src/robot_movement/: CMakeLists.txt  package.xml
src/robot_movement/launch/: basic_movement.launch  basic_movement2.launch
src/robot_movement/scripts/: test.py
src/robot_movement/src/: Cube.py  MoveGroup.py  altpp.py  altpp2.py  boxNameTest.py  grasp.txt  pap_gicmpt.py  pap_git.py  pick_and_place.py  pick_and_place_bin.py  targets.yaml  test.py
